@startuml
 'https://plantuml.com/class-diagram

 hide circle
 skinparam classAttributeIconSize 0


 class data.sql {
    +INSERT INTO PRODUCT (designation, description, sku) VALUES ("xxx","xxx","xxx")
 }



 class Product {
     - productId
     - designation
     - description
     - setOfImages
     - sku
     - aggregatedRating
     Product(Long productId, String designation, String description, String setOfImages, Long sku, Long aggregatedRating)
 }

 class ProductRepository {
     +save(Product newProduct) : Product
     +findAllDesignations(Long productId): List<String>
     +deleteByIdIfMatch(Long productId): int
 }

 ProductRepository "1" --> "0.." Product:  records

 data.sql ..> ProductRepository




 @enduml